@@ -3,6 +3,7 @@
 * Update mgltex (thanks to Diego Sejas Viscarra)
 * Add cmake option MGL_DEF_FONT to change default font name or use built-in one (if MGL_DEF_FONT is empty).
 * Add reading files with complex numbers by 'read' command.
+* Parallelize reading textual data files.
 
 2.3.1 Released 21 October 2014
 
